--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
+    "framer-motion": "^12.30.1",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "postgres": "^3.4.8",
